# ElectionPoland

./: .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt
scripts/: Voter flows.py
src/: _version.py
src/ElectionPoland/: constants.py
src/ElectionPoland/data_loader/: data_loader.py
src/ElectionPoland/experiments/: __init__.py  predict_second_round.py
