[build-system]
requires = [
    "setuptools>=67",
    "setuptools_scm>=8.0",
]
build-backend = "setuptools.build_meta"

[project]
name = "ElectionPoland"
authors = [
  {name = "Maciej Filinski"}
]
maintainers = [
  {name = "Maciej Filinski"}
]
description = ""
readme = "README.md"
classifiers = [
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
]
version = "0.1.0"
dynamic = ["dependencies"]
requires-python = '>=3.9'

[tool.setuptools.dynamic]
dependencies = {file = ["requirements.txt"]}


[project.urls]
Homepage = "https://github.com/Maciej-Filinski/NPIs.git"


[tool.pytest.ini_options]
testpaths = [
    "tests",
]

[tool.black]
line-length = 88

[tool.isort]
profile = "black"

[tool.setuptools_scm]
version_file = "src/_version.py"

[tool.coverage.report]
exclude_also = [
    "pass"
]